# ObfuscatedKeylogger

./: LICENSE  ObfuscatedKeylogger.sln  README.md
ObfuscatedKeylogger/: CMakeLists.txt  Keylogger.cpp  Keylogger.h  ObfuscatedKeylogger.cpp  ObfuscatedKeylogger.vcxproj  ObfuscatedKeylogger.vcxproj.filters  Obfuscation.cpp  Obfuscation.h  Transmission.cpp  Transmission.h  resource.h
Release/ARM/Release/ObfuscatedKeylogger.rep/: project.prp  projectState
Release/ARM/Release/ObfuscatedKeylogger.rep/idata/: ~journal.bak
Release/ARM/Release/ObfuscatedKeylogger.rep/idata/00/: 00000000.prp
Release/ARM/Release/ObfuscatedKeylogger.rep/idata/00/~00000000.db/: db.2.gbf
Release/ARM/Release/ObfuscatedKeylogger.rep/user/00/: 00000000.prp
Release/ARM/Release/ObfuscatedKeylogger.rep/user/00/~00000000.db/: db.1.gbf
Server/: deobfuscate.py  server.py
